<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="20dp">

    <TextView
        android:id="@+id/txtNama"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:gravity="center"
        android:text="@string/name"
        android:textSize="20sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_below="@+id/txtNama"
        android:gravity="center"
        android:layout_margin="5dp">

        <Button
            android:id="@+id/btnInputNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_note" />

        <Button
            android:id="@+id/btnInputMhs"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/input_mahasiswa"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnLihatNote"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_note"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnLihatMahasiswa"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/lihat_mahasiswa"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnPagination"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pagination"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnSearch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/search"
            android:layout_marginTop="10dp"/>

        <Button
            android:id="@+id/btnLogout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="Logout"
            android:textAllCaps="false" />

    </LinearLayout>


</RelativeLayout>