<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_gravity="center"
    android:gravity="center"
    android:padding="20dp">

    <ImageView
        android:id="@+id/ivFoto"
        android:layout_width="120dp"
        android:layout_height="120dp"
        android:src="@drawable/ic_launcher_background"
        />

    <EditText
        android:id="@+id/edtNimMhs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/nim"
        android:inputType="textPersonName"/>

    <EditText
        android:id="@+id/edtNamaMhs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:hint="@string/nama"
        android:inputType="textPersonName"/>

    <Button
        android:id="@+id/btnPostMhs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/posting"
        android:textAllCaps="false" />

</LinearLayout>